# PredictionMarkets

./: .env.example  .gitignore  README.md  app.py  arb_ledger.db  arb_scanner.py  config.example.yaml  config.py  config.yaml  config_mock.yaml  database.py  project_alpha.db  pyproject.toml  replit.md  telegram_bot.py  whale_watch.py
attached_assets/: Pasted-Below-is-a-complete-BRD-you-can-paste-into-Replit-as-a-_1767404363319.txt  Pasted-Here-is-a-complete-Business-Requirement-Document-BRD-ta_1767401083744.txt
deploy/: .env.example  README.md  arbbot.service  install.sh  package.sh  requirements.txt
src/: __init__.py  config.py  main.py
src/adapters/: __init__.py  base.py  mock.py  polymarket.py
src/cli/: __init__.py  commands.py
src/execution/: __init__.py  executor.py  risk.py
src/marketdata/: __init__.py  orderbook_state.py
src/reporting/: __init__.py  report.py
src/storage/: __init__.py  ledger.py
src/strategy/: __init__.py  signal_engine.py
tests/: __init__.py
